--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.17.3",
+    "handlebars-helpers": "^0.10.0",
     "mongoose": "^5.6.6",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
